--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "ts-node ./src/app.ts",
     "start:nodemon": "./node_modules/nodemon/bin/nodemon.js",
-    "start:prod": "npm run build && node ./dist/src/server.js",
+    "start:prod": "npm run build && node ./dist/src/app.js",
     "build": "npx tsc",
     "test": "jest"
   },
